[package]
name = "krunker-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.16", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[example]]
name = "simple"
path = "examples/simple.rs"
