[package]
name = "krunker-client"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1.16", features = ["full"] }
tokio-tungstenite = { version = "0.17", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.0"
reqwest = { version = "0.11", features = ["json"] }
regex = "1.5"

[[example]]
name = "simple"
path = "examples/simple.rs"
